Fixed gab in the images layout bug;changed main html file to index for Github pages hosting

--- a/drumFinder.css
+++ b/drumFinder.css
@@ -118,8 +118,8 @@ img {
 .questions {
   position: absolute;
   top: 386vh;
-  width: 100%;
-  height: 30vh;
+  /* width: 100%; */
+  /* height: 30vh; */
   z-index: 1000;
   background-color: antiquewhite;
   border: 3px solid teal;
@@ -141,6 +141,7 @@ img {
   justify-content: space-between;
 }
 .images {
+  width: 100%;
   position: relative;
   bottom: 0;
   display: flex;
@@ -157,7 +158,7 @@ img {
   width: 50%;
 }
 #scrollUp {
-  position: relative;
+  position: absolute;
   top: 87vh;
   background-color: burlywood;
 }
